# drone-traffic-visualizer

./: .gitignore  Makefile  PHONE_TESTING.md  README.md  TEST_PROOF.md  pyproject.toml  requirements.txt  run.sh  start_backend.sh
data/facility_maps/: benz_grid.json  gt_grid.json
data/playback/: benz_demo.json  gt_demo.json
data/simulation_exports/: benz_perimeter_patrol.json
docs/: AR_APP_INTEGRATION.md  DJI_ANDROID_APP_README.md  DJI_INTEGRATION.md  FAA_RULES.md  LIVE_TELEMETRY_API.md  MARKET_RESEARCH_BUSINESS_MODEL.md  PHASE1_WEB_MVP.md  VR_AR_FEATURES_IMPLEMENTATION.md
examples/: README.md  test_live_telemetry.py  test_live_websocket.py
scenarios/: catalog.json  georgia_tech.json  mercedes_benz.json
src/: __init__.py  models.py
src/adapters/: live.py  playback.py
src/scenarios/: generate_demo.py  loader.py
src/server/: app.py  main.py
src/services/: altitude_service.py  geo.py
src/utils/: coordinates.py
src/web/: .env.example  .env.local.template  index.html  package.json  vite.config.js
src/web/src/: App.css  App.jsx  index.css  main.jsx  styles.css
src/web/src/components/: CesiumViewer.css  CesiumViewer.jsx  DroneInspector.css  DroneInspector.jsx  LayerToggles.css  LayerToggles.jsx  PlaybackControls.css  PlaybackControls.jsx  ScenarioSelector.css  ScenarioSelector.jsx
tests/: README.md  test_altitude_service.py  test_live_telemetry.py  test_playback.py  test_playback_and_facility.py
tests/data/: test_simulation.json
